--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "node-fetch": ">= 1.7.3",
     "pg": ">= 7.6.1",
     "pg-native": ">= 3.0.0",
+    "request": ">= 2.88.0",
+    "request-promise-native": ">= 1.0.5",
     "sequelize": ">= 4.41.0",
     "source-map-support": ">=0"
   },
@@ -34,6 +36,8 @@
     "@types/mocha": ">= 2.2.45",
     "@types/node": ">=8.5.2",
     "@types/node-fetch": ">= 1.6.7",
+    "@types/request": "^2.48.1",
+    "@types/request-promise-native": "^1.0.15",
     "@types/sequelize": ">= 4.27.30",
     "@types/text-encoding": ">= 0.0.32"
   },
