--- a/package.json
+++ b/package.json
@@ -4,42 +4,43 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
-    "koa": ">= 2.4.1",
-    "@koa/cors": ">= 2.2.1",
-    "koa-json": ">= 2.0.2",
-    "koa-router": ">= 7.3.0",
-    "moment": ">= 2.20.1",
-    "node-fetch": ">= 1.7.3",
-    "pg": ">= 7.6.1",
-    "pg-native": ">= 3.0.0",
-    "request": ">= 2.88.0",
-    "request-promise-native": ">= 1.0.5",
-    "sequelize": ">= 4.41.0",
-    "source-map-support": ">=0"
+    "koa": "^2.6.1",
+    "@koa/cors": "^2.2.2",
+    "koa-json": "^2.0.2",
+    "koa-router": "^7.4.0",
+    "moment": "^2.22.2",
+    "node-fetch": "^2.2.1",
+    "pg": "^7.6.1",
+    "pg-native": "^3.0.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
+    "sequelize": "^4.41.1",
+    "source-map-support": ">=0",
+    "ws": "^6.1.0"
   },
   "devDependencies": {
-    "chai": ">= 4.1.2",
-    "mocha": ">= 4.1.0",
-    "nodemon": ">= 1.14.6",
-    "tslib": ">= 1.8.1",
-    "tslint": ">= 5.8.0",
-    "tslint-loader": ">= 3.5.3",
-    "ts-loader": ">= 3.1.1",
-    "ts-node": ">= 4.1.0",
-    "typescript": ">= 3.1.6",
-    "@types/chai": ">= 4.0.10",
-    "@types/koa": ">= 2.0.43",
-    "@types/koa__cors": ">= 2.2.2",
-    "@types/koa-json": ">= 2.0.18",
-    "@types/koa-router": ">= 7.0.27",
-    "@types/lodash": ">= 4.14.91",
-    "@types/mocha": ">= 2.2.45",
-    "@types/node": ">=8.5.2",
-    "@types/node-fetch": ">= 1.6.7",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.6",
+    "tslib": "^1.9.3",
+    "tslint": "^5.11.0",
+    "tslint-loader": "^3.5.4",
+    "ts-loader": "^5.3.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.6",
+    "@types/chai": "^4.1.7",
+    "@types/koa": "^2.0.46",
+    "@types/koa__cors": "^2.2.3",
+    "@types/koa-json": "^2.0.18",
+    "@types/koa-router": "^7.0.33",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.3",
+    "@types/node-fetch": "^2.1.2",
     "@types/request": "^2.48.1",
     "@types/request-promise-native": "^1.0.15",
-    "@types/sequelize": ">= 4.27.30",
-    "@types/text-encoding": ">= 0.0.32"
+    "@types/sequelize": "^4.27.30",
+    "@types/text-encoding": "^0.0.34",
+    "@types/ws": "^6.0.1"
   },
   "scripts": {
     "dev": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts",
