pulling data from rito

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
-    "koa": "^2.6.1",
     "@koa/cors": "^2.2.2",
+    "koa": "^2.6.1",
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
     "moment": "^2.22.2",
     "node-fetch": "^2.2.1",
+    "package.json": "^2.0.1",
     "pg": "^7.6.1",
     "pg-native": "^3.0.0",
     "request": "^2.88.0",
