--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "node-fetch": "^2.2.1",
     "package.json": "^2.0.1",
     "pg": "^7.6.1",
-    "pg-native": "^3.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "sequelize": "^4.41.1",
     "source-map-support": ">=0",
     "ws": "^6.1.0"
+  },
+  "optionalDependencies": {
+    "pg-native": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
