--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@koa/cors": "^2.2.2",
     "koa": "^2.6.1",
+    "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
@@ -35,6 +36,7 @@
     "@types/chai": "^4.1.7",
     "@types/koa": "^2.0.46",
     "@types/koa__cors": "^2.2.3",
+    "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-json": "^2.0.18",
     "@types/koa-router": "^7.0.33",
     "@types/koa-static": "^4.0.0",
