--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-fetch": "^2.2.1",
     "package.json": "^2.0.1",
     "pg": "^7.6.1",
+    "plotly": "^1.0.6",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "sequelize": "^4.41.1",
